# poc-fastapi-rabbitmq

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  rabbit.conf
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: HelloWorld.tsx  MessageDashboard.tsx
src/: logging.dev.yaml  publish_message.py
src/app/: asgi.py  connection_manager.py  schemas.py  setup_logging.py
src/shared/: exceptions.py  presenter.py
src/shared/api/schemas/: page.py
src/shared/repository/: sqlalchemy.py
src/shared/repository/ports/: generic.py
src/utils/logger/formatter/: color_extra.py  standard_extra.py
